stl-test/Tests/coordinate/index/Negative/test1.cpp
//#error
#include <coordinate>
int main(void)
{
    std::offset<-1> cord;
}
